<resources>
    <string name="check_system">欣華盤點系統</string>
    <string name="input_file">電腦轉至行動裝置</string>
    <!--Page-->
    <string name="file_page">檔案頁面</string>
    <string name="scan_page">盤點掃描</string>
    <string name="search_page">人工查詢</string>
    <string name="itemList_page">財產清單</string>
    <string name="itemDetail_page">財產明細</string>
    <!--Item List Adapter-->
    <string name="status">狀態</string>
    <string name="name">名稱</string>
    <string name="item_id">財產編號-流水號</string>
    <string name="item_little_id">財產編號</string>
    <string name="item_water_id">流水號</string>
    <string name="save_location">存置地點</string>
    <string name="save_agent">保管人</string>
    <string name="save_department">保管單位</string>
    <string name="use_agent">使用人</string>
    <string name="use_department">使用單位</string>
    <string name="type">型式</string>
    <string name="brand">廠牌</string>
    <string name="buy_date">購買日</string>
    <string name="years">年限</string>
    <string name="delete">報廢</string>
    <string name="print">補印</string>
    <string name="confirm">確認</string>
    <string name="cancel">取消</string>
    <string name="search">查詢</string>
    <string name="clear">清除</string>
</resources>
