<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/save_department"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/departmentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="請點選保管單位"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/save_agent"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/agentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="請點選保管人"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/save_location"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="請點選存置地點"
            android:textSize="18sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/item_id"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/bg_gray"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/bg_gray"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/bg_white"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="區分"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/localIdEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@color/bg_white"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:padding="10dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_weight="5"
                android:background="@color/bg_gray"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/bg_white"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="財產編號"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/idEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@color/bg_white"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:padding="10dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:background="@color/bg_gray"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/bg_white"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="流水號"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/waterEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@color/bg_white"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:padding="10dp"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/searchTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/search"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:background="@color/bg_gray"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/clearTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/clear"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_margin="10dp"
            android:background="@color/bg_gray"
            android:padding="10dp"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>